--- a/PaymentsTU/App.xaml
+++ b/PaymentsTU/App.xaml
@@ -1,8 +1,6 @@
 ﻿<Application x:Class="PaymentsTU.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PaymentsTU"
-             xmlns:dialogView="clr-namespace:PaymentsTU.Dialogs.DialogView"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -12,9 +10,23 @@
             <Style TargetType="{x:Type Control}">
                 <Setter Property="Focusable" Value="False"/>
             </Style>
+            <ControlTemplate x:Key="ValidationFailedTemplate">
+                <Border BorderBrush="Red" BorderThickness="2" CornerRadius="2">
+                    <Border.Visibility>
+                        <Binding ElementName="placeholder" Path="AdornedElement.IsVisible">
+                            <Binding.Converter>
+                                <BooleanToVisibilityConverter/>
+                            </Binding.Converter>
+                        </Binding>
+                    </Border.Visibility>
+                    <StackPanel>
+                        <AdornedElementPlaceholder x:Name="placeholder"/>
+                    </StackPanel>
+                </Border>
+            </ControlTemplate>
             <!--<ControlTemplate x:Key="ValidationFailedTemplate">
                     <AdornedElementPlaceholder Name="customAdorner" VerticalAlignment="Center">
-                        <Border BorderBrush="Red" BorderThickness="1">
+                        --><!--<Border BorderBrush="Red" BorderThickness="1">
                             <Border.Background>
                                 <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
                                     <VisualBrush.Visual>
@@ -27,34 +39,20 @@
                                     </VisualBrush.Visual>
                                 </VisualBrush>
                             </Border.Background>
-                        </Border>
+                        </Border>--><!--
                     </AdornedElementPlaceholder>
             </ControlTemplate>-->
-            <Style TargetType="TextBox">
+            <!--<Style TargetType="{x:Type TextBox}">
                 <Style.Triggers>
                     <Trigger Property="Validation.HasError" Value="True">
-                        <!--<Setter Property="ToolTip"
-                        Value="{Binding RelativeSource={x:Static RelativeSource.Self},
-                        Path=(Validation.Errors).CurrentItem.ErrorContent}"/>-->
-                        <!--<Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type TextBox}">
-                                    <Grid>
-                                        <ScrollViewer x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                                        <TextBlock x:Name="textBlock" Foreground="LightGray" Text="{Binding RelativeSource={x:Static RelativeSource.TemplatedParent},
-                        Path=(Validation.Errors).CurrentItem.ErrorContent}" TextWrapping="Wrap" />
-                                    </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>-->
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type TextBoxBase}">
-                                    <Border Name="Border" BorderBrush="Red" BorderThickness="1">
+                                    <Border x:Name="Border" BorderBrush="Blue" BorderThickness="0.5">
                                         <Border.Background>
                                             <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
                                                 <VisualBrush.Visual>
-                                                    <Label IsTabStop="False" Content="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(Validation.Errors).CurrentItem.ErrorContent}" Foreground="LightGray" />
+                                                    <Label IsTabStop="False" Content="{Binding (Validation.Errors).CurrentItem.ErrorContent, RelativeSource={RelativeSource TemplatedParent}}" Foreground="LightGray" />
                                                 </VisualBrush.Visual>
                                             </VisualBrush>
                                         </Border.Background>
@@ -65,7 +63,41 @@
                         </Setter>
                     </Trigger>
                 </Style.Triggers>
-            </Style>
+            </Style>-->
+            <!--<Style TargetType="{x:Type TextBox}">
+                <Style.Triggers>
+                    --><!--<Trigger Property="Validation.HasError" Value="True">
+                        <Setter Property="BorderBrush" Value="Transparent"/>
+                    </Trigger>--><!--
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="Validation.HasError" Value="True" />
+                            <Condition Property="IsFocused" Value="True" />
+                        </MultiTrigger.Conditions>
+                        <MultiTrigger.Setters>
+                            <Setter Property="BorderBrush" Value="Green" />
+                        </MultiTrigger.Setters>
+                    </MultiTrigger>
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="Validation.HasError" Value="True" />
+                            <Condition Property="IsKeyboardFocused" Value="True" />
+                        </MultiTrigger.Conditions>
+                        <MultiTrigger.Setters>
+                            <Setter Property="BorderBrush" Value="BlueViolet" />
+                        </MultiTrigger.Setters>
+                    </MultiTrigger>
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="Validation.HasError" Value="True" />
+                            <Condition Property="IsMouseOver" Value="True" />
+                        </MultiTrigger.Conditions>
+                        <MultiTrigger.Setters>
+                            <Setter Property="BorderBrush" Value="Green" />
+                        </MultiTrigger.Setters>
+                    </MultiTrigger>
+                </Style.Triggers>
+            </Style>-->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
