--- a/PaymentsTU/Dialogs/DialogView/DialogPayment.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogPayment.xaml
@@ -35,7 +35,10 @@
                       SelectedItem="{Binding Path=CurrentDepartment, Mode=TwoWay}"
                       SelectedValue="{Binding Path=DepartmentId, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
                       VerticalAlignment="Top"
-                      IsSynchronizedWithCurrentItem="False" TabIndex="1" IsTabStop="True"/>
+                      IsSynchronizedWithCurrentItem="False"
+                      TabIndex="1"
+                      IsTabStop="True"
+                      Validation.ErrorTemplate="{StaticResource ValidationFailedTemplate}"/>
         </StackPanel>
         <StackPanel>
             <TextBlock  Text="Вид платежа" HorizontalAlignment="Left" VerticalAlignment="Top" />
@@ -47,7 +50,10 @@
                       SelectedValuePath="Id"
                       SelectedValue="{Binding Path=PaymentTypeId, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
                       VerticalAlignment="Top"
-                      IsSynchronizedWithCurrentItem="False" TabIndex="2" IsTabStop="True"/>
+                      IsSynchronizedWithCurrentItem="False"
+                      TabIndex="2"
+                      IsTabStop="True"
+                      Validation.ErrorTemplate="{StaticResource ValidationFailedTemplate}"/>
         </StackPanel>
         <Grid>
             <Grid.RowDefinitions>
@@ -69,7 +75,8 @@
                     TimePickerAllowSpin="False"
                     TimePickerShowButtonSpinner="False"
                     TimePickerVisibility="Hidden"
-                    AllowTextInput="False" TabIndex="3"/>
+                    AllowTextInput="False" TabIndex="3"
+                    Validation.ErrorTemplate="{StaticResource ValidationFailedTemplate}"/>
             </StackPanel>
             <StackPanel Grid.Row="0" Grid.Column="1" Margin="2, 0, 0, 0" Orientation="Vertical">
                 <TextBlock  Text="Сумма" HorizontalAlignment="Left" VerticalAlignment="Top" />
@@ -78,7 +85,8 @@
                                     FormatString="#,##0.00"
                                     Value="{Binding Value, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
                                     Minimum="0"
-                                    TabIndex="4"/>
+                                    TabIndex="4"
+                                    Validation.ErrorTemplate="{StaticResource ValidationFailedTemplate}"/>
             </StackPanel>
             <StackPanel Grid.Row="0" Grid.Column="2" Margin="2, 0, 0, 0" Orientation="Vertical">
                 <TextBlock  Text="Валюта" HorizontalAlignment="Left" VerticalAlignment="Top" />
