--- a/PaymentsTU/Dialogs/DialogView/DialogEditName.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogEditName.xaml
@@ -1,14 +1,17 @@
-﻿<UserControl x:Class="PaymentsTU.Dialogs.DialogView.DialogEditName"
+﻿<local:DialogViewBase x:Class="PaymentsTU.Dialogs.DialogView.DialogEditName"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PaymentsTU.Dialogs.DialogView"
-             xmlns:controls="clr-namespace:PaymentsTU.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
     <StackPanel Margin="4">
-        <controls:LabeledTextBox Label="{Binding RecordTitle}" Text="{Binding RecordData}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="392"/>
+        <!--<controls:LabeledTextBox Label="{Binding RecordTitle}" Text="{Binding RecordData}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="392"/>-->
+        <StackPanel>
+            <TextBlock  Text="{Binding RecordTitle}" HorizontalAlignment="Left" VerticalAlignment="Top" />
+            <TextBox Text="{Binding RecordData, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" Height="24" IsTabStop="True" TabIndex="0" Focusable="True" Validation.ErrorTemplate="{StaticResource ValidationFailedTemplate}" />
+        </StackPanel>
         <Grid Margin="0,10,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -28,4 +31,4 @@
             </StackPanel>
         </Grid>
     </StackPanel>
-</UserControl>
+</local:DialogViewBase>
