--- a/PaymentsTU/Dialogs/DialogView/DialogPayment.xaml
+++ b/PaymentsTU/Dialogs/DialogView/DialogPayment.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl x:Class="PaymentsTU.Dialogs.DialogView.DialogPayment"
+﻿<dialogView:DialogViewBase
+             x:Class="PaymentsTU.Dialogs.DialogView.DialogPayment"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xwpf="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+             xmlns:dialogView="clr-namespace:PaymentsTU.Dialogs.DialogView"
              mc:Ignorable="d" 
              d:DesignHeight="300" Width="400">
     <StackPanel Margin="4" FocusManager.FocusedElement="{Binding ElementName=Employee}">
@@ -119,4 +121,5 @@
             </StackPanel>
         </Grid>
     </StackPanel>
-</UserControl>
+</dialogView:DialogViewBase>
+
