--- a/PaymentsTU/View/MainWindow.xaml
+++ b/PaymentsTU/View/MainWindow.xaml
@@ -23,6 +23,9 @@
         <DataTemplate DataType="{x:Type viewModel:PaymentTypeViewModel}">
             <view:TypePaymentView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:ReportViewModel}">
+            <view:ReportView />
+        </DataTemplate>
     </Window.Resources>
     <Window.DataContext>
         <viewModel:MainViewModel/>
