Report: group and total by group

--- a/PaymentsTU/View/ReportView.xaml
+++ b/PaymentsTU/View/ReportView.xaml
@@ -18,8 +18,39 @@
                 <Trigger Property="ItemsControl.AlternationIndex"  Value="1">
                     <Setter Property="Background" Value="WhiteSmoke" />
                 </Trigger>
+                <DataTrigger Binding="{Binding Path=RowType}" Value="1">
+                    <Setter Property="FontWeight" Value="Bold" />
+                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="Background" Value="DarkGreen" />
+                </DataTrigger>
+
             </Style.Triggers>
         </Style>
+        <CollectionViewSource x:Key="DepartmentGroups" Source="{Binding Report.Rows}">
+            <CollectionViewSource.GroupDescriptions>
+                <PropertyGroupDescription PropertyName="Department" />
+            </CollectionViewSource.GroupDescriptions>
+        </CollectionViewSource>
+        <GroupStyle x:Key="GroupStyle">
+            <GroupStyle.ContainerStyle>
+                <Style TargetType="{x:Type GroupItem}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Expander IsExpanded="True"  Background="AliceBlue">
+                                    <Expander.Header>
+                                        <StackPanel>
+                                            <TextBlock Text="{Binding Path=Items[0].Department}" FontStyle="Italic" FontWeight="Bold" Foreground="BlueViolet"  VerticalAlignment="Bottom" />
+                                        </StackPanel>
+                                    </Expander.Header>
+                                    <ItemsPresenter />
+                                </Expander>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </GroupStyle.ContainerStyle>
+        </GroupStyle>
     </UserControl.Resources>
     <DockPanel LastChildFill="True">
         <Border DockPanel.Dock="Left" CornerRadius="2" BorderThickness="1" BorderBrush="LightGray" Margin="0,0,4,0">
@@ -80,14 +111,15 @@
 
             </StackPanel>
         </Border>
-        <ListView ItemsSource="{Binding Report.Rows}" IsSynchronizedWithCurrentItem="True" AlternationCount="2">
-            
+        <ListView ItemsSource="{Binding Source={StaticResource DepartmentGroups}}" IsSynchronizedWithCurrentItem="True" AlternationCount="2">
+            <ListView.GroupStyle>
+                <StaticResourceExtension ResourceKey="GroupStyle" />
+            </ListView.GroupStyle>
             <ListView.View>
-                
-            <GridView ctrl:GridViewColumnCollection.HeaderTextMember="HeaderText"
+                <GridView ctrl:GridViewColumnCollection.HeaderTextMember="HeaderText"
                           ctrl:GridViewColumnCollection.DisplayMemberMember="DisplayMember"
+                          ctrl:GridViewColumnCollection.WidthMember="Width"
                           ctrl:GridViewColumnCollection.ColumnsSource="{Binding Report.Columns}"/>
-            
             </ListView.View>
             
         </ListView>
