--- a/PaymentsTU/View/PaymentReportView.xaml
+++ b/PaymentsTU/View/PaymentReportView.xaml
@@ -3,20 +3,64 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PaymentsTU.View"
-             xmlns:controls="clr-namespace:PaymentsTU.Controls"
+             xmlns:ctrl="clr-namespace:PaymentsTU.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
-    <Grid>
-        <!--<ListView ItemsSource="{Binding Rows}" IsSynchronizedWithCurrentItem="True" Grid.Row="0">
-            --><!--<ListView.View>
-                -->
-            <!--<GridView controls:GridViewColumnCollection.HeaderTextMember="HeaderText"
-                          local:GridViewColumns.DisplayMemberMember="DisplayMember"
-                          local:GridViewColumns.ColumnsSource="{Binding Columns}"/>-->
-            <!--
-            </ListView.View>--><!--
-        </ListView>-->
-    </Grid>
+    <UserControl.Resources>
+        <Style TargetType="ListViewItem">
+            <Style.Triggers>
+                <Trigger Property="ItemsControl.AlternationIndex"  Value="0">
+                    <Setter Property="Background" Value="White" />
+                </Trigger>
+                <Trigger Property="ItemsControl.AlternationIndex"  Value="1">
+                    <Setter Property="Background" Value="WhiteSmoke" />
+                </Trigger>
+                <DataTrigger Binding="{Binding Path=RowType}" Value="1">
+                    <Setter Property="FontWeight" Value="Bold" />
+                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="Background" Value="DarkGreen" />
+                </DataTrigger>
+
+            </Style.Triggers>
+        </Style>
+        <CollectionViewSource x:Key="DepartmentGroups" Source="{Binding Rows}">
+            <CollectionViewSource.GroupDescriptions>
+                <PropertyGroupDescription PropertyName="Department" />
+            </CollectionViewSource.GroupDescriptions>
+        </CollectionViewSource>
+        <GroupStyle x:Key="GroupStyle">
+            <GroupStyle.ContainerStyle>
+                <Style TargetType="{x:Type GroupItem}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Expander IsExpanded="True"  Background="AliceBlue">
+                                    <Expander.Header>
+                                        <StackPanel>
+                                            <TextBlock Text="{Binding Path=Items[0].Department}" FontStyle="Italic" FontWeight="Bold" Foreground="BlueViolet"  VerticalAlignment="Bottom" />
+                                        </StackPanel>
+                                    </Expander.Header>
+                                    <ItemsPresenter />
+                                </Expander>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </GroupStyle.ContainerStyle>
+        </GroupStyle>
+    </UserControl.Resources>
+
+    <ListView ItemsSource="{Binding Source={StaticResource DepartmentGroups}}" IsSynchronizedWithCurrentItem="True" AlternationCount="2">
+        <ListView.GroupStyle>
+            <StaticResourceExtension ResourceKey="GroupStyle" />
+        </ListView.GroupStyle>
+        <ListView.View>
+            <GridView ctrl:GridViewColumnCollection.HeaderTextMember="HeaderText"
+                          ctrl:GridViewColumnCollection.DisplayMemberMember="DisplayMember"
+                          ctrl:GridViewColumnCollection.WidthMember="Width"
+                          ctrl:GridViewColumnCollection.ColumnsSource="{Binding Columns}"/>
+        </ListView.View>
+
+    </ListView>
 </UserControl>
