--- a/PaymentsTU/View/ReportView.xaml
+++ b/PaymentsTU/View/ReportView.xaml
@@ -16,6 +16,12 @@
     <DockPanel LastChildFill="True">
         <Border DockPanel.Dock="Left" CornerRadius="2" BorderThickness="1" BorderBrush="LightGray" Margin="0,0,4,0">
             <StackPanel >
+                <Label Content="Отчет:"/>
+                <ComboBox
+                    ItemsSource="{Binding Reports}"
+                    DisplayMemberPath="Title"
+                    SelectedItem="{Binding Path=Report, Mode=TwoWay}"
+                    Margin="2, 0, 4, 0"/>
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -69,7 +75,6 @@
                         Command="{Binding RunCommand}"
                     />
                 </Grid>
-
             </StackPanel>
         </Border>
         <ContentPresenter x:Name="ContentPresenter" Content="{Binding Report}"></ContentPresenter>
