--- a/PaymentsTU/View/PaymentView.xaml
+++ b/PaymentsTU/View/PaymentView.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:xwpf="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
              xmlns:local="clr-namespace:PaymentsTU.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
@@ -16,7 +17,44 @@
     </UserControl.Resources>
 
     <DockPanel Name="BasePanel">
-        <local:DataNavigationBar DockPanel.Dock="Top" DataContext="{Binding NavigationBar}" Height="30"></local:DataNavigationBar>
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <local:DataNavigationBar DataContext="{Binding NavigationBar}" Height="30" Grid.Column="0"></local:DataNavigationBar>
+            <StackPanel Orientation="Horizontal" Grid.Column="1">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label>Период с:</Label>
+                    <xwpf:DateTimePicker
+                                Height="24"
+                                AutoCloseCalendar="True"
+                                ButtonSpinnerLocation="Left"
+                                Format="Custom"
+                                FormatString="dd.MM.yyyy"
+                                Value="{Binding From, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
+                                TimePickerAllowSpin="False"
+                                TimePickerShowButtonSpinner="False"
+                                TimePickerVisibility="Hidden"
+                                AllowTextInput="False"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label>по:</Label>
+                    <xwpf:DateTimePicker
+                                Height="24"
+                                AutoCloseCalendar="True"
+                                ButtonSpinnerLocation="Left"
+                                Format="Custom"
+                                FormatString="dd.MM.yyyy"
+                                Value="{Binding To, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
+                                TimePickerAllowSpin="False"
+                                TimePickerShowButtonSpinner="False"
+                                TimePickerVisibility="Hidden"
+                                AllowTextInput="false"/>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
         <ListView Name="Payments" ItemsSource="{Binding ItemsDataView, Mode=OneWay}" IsSynchronizedWithCurrentItem="True">
             <ListView.View>
                 <GridView>
